--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>ZAVAL</title>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2HN14YY5RS"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+<head>
+  <meta charset="utf-8">
+  <title>ZAVAL</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-36THG564GQ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'G-2HN14YY5RS');
-</script>
-  </head>
-  <body>
+    gtag('config', 'G-36THG564GQ');
+  </script>
+</head>
+<body>
 
-<h2>ZAVAL.CO</h2>
+  <h2>ZAVAL.CO</h2>
 
-<p>Zaval as in chaos</p>
+  <p>Under Construction...</p>
 
-  </body>
+</body>
 </html>
