Updated splash page

--- a/index.html
+++ b/index.html
@@ -4,20 +4,51 @@
   <meta charset="utf-8">
   <title>ZAVAL</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-36THG564GQ"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-36THG564GQ');
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-36THG564GQ">
   </script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-36THG564GQ');
+  </script>
+  <style media="screen">
+  /*GLOBAL STYLES*/
+  h1{
+    font-size: 7vw;
+    font-family: helvetica;
+    margin-top: 0;
+  }
+  p {
+    font-size: 3vw;
+    font-family: helvetica;
+    margin-top: 0;
+  }
+  img{
+    width: 100%;
+  }
+  div.spacer {
+    height: 20vh;
+  }
+  html, body {
+    margin: 0;
+    padding: 0;
+  }
+  </style>
 </head>
 <body>
+  <img src="https://svgur.com/i/hMQ.svg" alt="">
+  <h1>.co</h1>
+  <div class="spacer">
+  </div>
+  <p>under construction...</p>
+  &nbsp;
+  <div class="spacer">
 
-  <h2>ZAVAL.CO</h2>
-
-  <p>Under Construction...</p>
+  </div>
+  <p>Contact <strong> support@zaval.co </strong> for any inquiries.</p>
+</body>
 
 </body>
 </html>
